Plugged in the font, changed some of the styles, refactor functions 'showPreviousCard' and 'showNextCard'

--- a/learn_english_words/src/components/Footer/footer.module.scss
+++ b/learn_english_words/src/components/Footer/footer.module.scss
@@ -1,24 +1,3 @@
-.block_navigation {
-    width: 10em;
-    min-height: 3em;
-    line-height: 3em;
-    color: #FFF;
-    border: 2px solid #FFF;
-    background-color: #08b865;
-    border-radius: 10px;
-    text-align: center;
-    font-size: medium;
-    margin: 10px;
-}
-
-.block_navigation:hover {
-    cursor: pointer;
-    background-color: #FFF;
-    border: 2px solid #08b865;
-    color: #08b865;
-    box-shadow: 0.1em 0.1em 1em #bef9dd;
-}
-
 .container {
     display: flex;
     flex: 1;
@@ -26,9 +5,35 @@
     align-items: center;
     flex-direction: row;
     flex-wrap: wrap;
-    min-height: 14vh;
-    background-color: #08b865;
+
+    min-height: 10vh;
+    background-color: #61a485;
+
     position: sticky;
     bottom: 0;
     z-index: 1;
+
+    .block_navigation {
+        width: 10em;
+        min-height: 3em;
+        line-height: 3em;
+        color: #FFF;
+        border: 2px solid #FFF;
+        background-color: #61a485;
+        border-radius: 10px;
+        text-align: center;
+        margin: 10px;
+
+        font-family: 'Inter';
+        font-size: 16px;
+        font-weight: 300;
+    }
+
+    .block_navigation:hover {
+        cursor: pointer;
+        background-color: #FFF;
+        border: 2px solid #61a485;
+        color: #61a485;
+        font-weight: 500;
+    }
 }
