--- a/learn_english_words/src/components/CardGallery/cardGallery.module.scss
+++ b/learn_english_words/src/components/CardGallery/cardGallery.module.scss
@@ -1,22 +1,30 @@
-.container {
-    display: flex;
-    justify-content: center;
-    gap: 10vw;
-    align-items: center;
-    margin: 30px;
+.wrapper {
+    padding: 30px 0;
+    background-color: #edf1f5;
 
-    .btn {
-        border: none;
+    .container {
+        display: flex;
+        justify-content: center;
+        gap: 7vw;
+        align-items: center;
+        margin: 30px;
+
+        .btn {
+            border: none;
+            height: 50px;
+            border-radius: 50%;
+        }
+
+        .btn:hover {
+            cursor: pointer;
+            box-shadow: 0.1em 0.1em 1em #579a7b;
+
+        }
+
     }
 
-    .btn:hover {
-        cursor: pointer;
-        box-shadow: 0.3em 0.3em 2em #08b865;
+    .card_number {
+        text-align: center;
+        margin-bottom: 30px;
     }
-
-}
-
-.card_number {
-    text-align: center;
-    margin-bottom: 30px;
 }
