--- a/learn_english_words/src/components/MainPage/mainPage.module.scss
+++ b/learn_english_words/src/components/MainPage/mainPage.module.scss
@@ -1,25 +1,32 @@
 .button {
     width: 10em;
     height: 2em;
-    background-color: #08b865;
+    background-color: #579a7b;
     color: white;
-    font-size: medium;
-    border-radius: 20px;
+    border-radius: 10px;
     border: none;
     margin-top: 4vh;
+    font-family: 'Inter';
+    font-size: 16px;
+    font-weight: 500;
+
 }
 
 .button:hover {
     cursor: pointer;
     background-color: #feac4c;
     transform: scale(1.01, 1.01);
-    box-shadow: 0.05em 0.05em 0.5em #08b865;
+    box-shadow: 0.05em 0.05em 0.5em #579a7b;
 }
 
 .text {
-    color: #08b865;
+    color: #579a7b;
     font-size: large;
     font-weight: 500;
+    font-family: 'Inter';
+    font-size: 26px;
+    font-weight: 500;
+
 }
 
 .image {
@@ -37,8 +44,10 @@
 
     .title {
         text-align: center;
-        font-size: xx-large;
-        color: #08b865;
+        color: #579a7b;
+        font-family: 'Inter';
+        font-size: 36px;
+        font-weight: 700;
     }
 
     .welcome {
@@ -49,8 +58,6 @@
         width: 100%;
         height: 50%;
         margin-top: 50px;
-
-
     }
 
     .info {
