--- a/learn_english_words/src/components/WordComponent/Word/word.module.scss
+++ b/learn_english_words/src/components/WordComponent/Word/word.module.scss
@@ -1,14 +1,19 @@
 .wrapper {
-    border: 1px solid #08b865;
+    border: 1px solid #579a7b;
     padding: 5px;
     background-color: #FFF;
+    font-family: 'Inter';
+    font-size: 19px;
+    font-weight: 300;
 }
 
 .input {
-    border: 2px solid #08b865;
+    border: 2px solid #579a7b;
     border-radius: 8px;
     padding: 5px;
     background-color: #FFF;
+    font-family: 'Inter';
+    font-size: 16px;
+    font-weight: 300;
     font-style: italic;
-    font-weight: 600;
 }
