--- a/learn_english_words/src/components/WordComponent/Word/word.module.scss
+++ b/learn_english_words/src/components/WordComponent/Word/word.module.scss
@@ -8,10 +8,10 @@
 }
 
 .input {
-    border: 2px solid #579a7b;
+    width: 95%;
+    border: 1px solid #579a7b;
     border-radius: 8px;
     padding: 5px;
-    background-color: #FFF;
     font-family: 'Inter';
     font-size: 16px;
     font-weight: 300;
