--- a/learn_english_words/src/components/CardGallery/cardGallery.module.scss
+++ b/learn_english_words/src/components/CardGallery/cardGallery.module.scss
@@ -1,13 +1,14 @@
 .wrapper {
     padding: 30px 0;
     background-color: #edf1f5;
+    height: calc(100vh - 192px);
 
     .container {
         display: flex;
         justify-content: center;
         gap: 7vw;
         align-items: center;
-        margin: 30px;
+        margin-top: 120px;
 
         .btn {
             border: none;
@@ -18,13 +19,23 @@
         .btn:hover {
             cursor: pointer;
             box-shadow: 0.1em 0.1em 1em #579a7b;
-
         }
-
     }
 
     .card_number {
         text-align: center;
         margin-bottom: 30px;
+        margin-top: 30px;
+    }
+}
+
+@media screen and (max-width: 568.98px) {
+    .wrapper {
+        padding: 30px 5px;
+
+        .container {
+            gap: 4vw;
+            margin: 50px 20px;
+        }
     }
 }
