--- a/learn_english_words/src/components/Header/header.module.scss
+++ b/learn_english_words/src/components/Header/header.module.scss
@@ -6,9 +6,14 @@
     align-items: center;
     flex: 1;
 
-    min-height: 10vh;
+    min-height: 60px;
     background-color: #61a485;
     padding: 0 15px;
+
+    position: sticky;
+    top: 0;
+    z-index: 1;
+
 
     .registration_form {
         display: flex;
@@ -40,7 +45,7 @@
                 color: #FFFFFF;
 
                 font-family: 'Inter';
-                font-size: 20px;
+                font-size: 16px;
                 font-weight: 300;
             }
 
