--- a/learn_english_words/src/components/WordCard/wordCard.module.scss
+++ b/learn_english_words/src/components/WordCard/wordCard.module.scss
@@ -55,6 +55,12 @@ $main-color: #579a7b;
         font-size: 16px;
         font-weight: 500;
     }
+
+    .button:focus {
+        border: none;
+        border: 1px solid #32644d;
+        box-shadow: inset 0.1em 0.1em 1em #32644d;
+    }
 }
 
 @media screen and (max-width: 568.98px) {
