Added styles for modile

--- a/learn_english_words/src/components/Footer/footer.module.scss
+++ b/learn_english_words/src/components/Footer/footer.module.scss
@@ -39,3 +39,13 @@
         text-decoration: none;
     }
 }
+
+@media screen and (max-width: 599.98px) {
+    .container {
+        .block_navigation {
+            min-height: 2em;
+            line-height: 2em;
+            margin: 6px;
+        }
+    }
+}
