--- a/learn_english_words/src/components/CardGallery/cardGallery.module.scss
+++ b/learn_english_words/src/components/CardGallery/cardGallery.module.scss
@@ -24,27 +24,31 @@
 
     .card_number {
         text-align: center;
-        margin-bottom: 30px;
-        margin-top: 30px;
+        margin-bottom: 15px;
+        margin-top: 15px;
     }
 
     .text {
         text-align: center;
         font-family: 'Inter';
-        font-size: 26px;
+        font-size: 20px;
         font-weight: 500;
         color: #396450;
         margin-bottom: 30px;
     }
 }
 
-@media screen and (max-width: 568.98px) {
+@media screen and (max-width: 599.98px) {
     .wrapper {
-        padding: 30px 5px;
+        padding: 15px 5px;
 
         .container {
             gap: 4vw;
-            margin: 50px 20px;
+            margin: 20px 10px;
+        }
+
+        .card_number {
+            margin: 5px 0;
         }
     }
 }
