--- a/learn_english_words/src/components/ErrorMessage/errorMessage.module.scss
+++ b/learn_english_words/src/components/ErrorMessage/errorMessage.module.scss
@@ -1,5 +1,5 @@
 .container {
-    height: calc(100vh - 282px);
+    height: 100vh;
     background-color: #edf1f5;
     text-align: center;
     padding-top: 150px;
@@ -25,5 +25,26 @@
         font-weight: 500;
         color: #396450;
         margin-top: 30px;
+    }
+}
+
+@media screen and (max-width: 599.98px) {
+    .container {
+        padding-top: 80px;
+
+        .title {
+            font-size: 26px;
+        }
+
+        .message {
+            font-size: 20px;
+            font-weight: 300;
+        }
+
+        .link {
+            font-size: 22px;
+            font-weight: 500;
+        }
+
     }
 }
