--- a/learn_english_words/src/components/MainPage/mainPage.module.scss
+++ b/learn_english_words/src/components/MainPage/mainPage.module.scss
@@ -9,7 +9,6 @@
     font-family: 'Inter';
     font-size: 16px;
     font-weight: 500;
-
 }
 
 .button:hover {
@@ -21,12 +20,9 @@
 
 .text {
     color: #579a7b;
-    font-size: large;
-    font-weight: 500;
     font-family: 'Inter';
     font-size: 26px;
     font-weight: 500;
-
 }
 
 .image {
@@ -40,6 +36,7 @@
 }
 
 .container {
+    height: calc(100vh - 120px);
     padding: 30px;
 
     .title {
@@ -47,7 +44,7 @@
         color: #579a7b;
         font-family: 'Inter';
         font-size: 36px;
-        font-weight: 700;
+        font-weight: 500;
     }
 
     .welcome {
@@ -59,14 +56,38 @@
         height: 50%;
         margin-top: 50px;
     }
+}
 
-    .info {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr;
-        align-items: center;
-        width: 100%;
-        height: 50%;
-        margin-top: 40px;
+@media screen and (max-width: 599.98px) {
+
+    .text {
+        font-size: 20px;
+        font-weight: 300;
+    }
+
+    .image {
+        margin: 0 auto;
+        object-fit: contain;
+    }
+
+    .button {
+        margin: 4vh;
+        font-weight: 300;
+    }
+
+    .container {
+        padding: 15px;
+        text-align: center;
+
+        .title {
+            font-size: 26px;
+            font-weight: 500;
+        }
+
+        .welcome {
+            display: block;
+            align-items: center;
+            margin-top: 30px;
+        }
     }
 }
