--- a/learn_english_words/src/components/WordCard/wordCard.module.scss
+++ b/learn_english_words/src/components/WordCard/wordCard.module.scss
@@ -63,11 +63,11 @@ $main-color: #579a7b;
     }
 }
 
-@media screen and (max-width: 568.98px) {
+@media screen and (max-width: 599.98px) {
     .container_card {
         width: 60%;
-        min-height: 150px;
-        padding: 10px;
+        height: 9em;
+        padding: 5px;
 
         .wordEnglish {
             margin: 15px 0 5px;
@@ -83,9 +83,9 @@ $main-color: #579a7b;
         }
 
         .button {
-            width: 80%;
+            max-width: 80%;
             height: 30px;
-            margin-top: 40px;
+            margin-top: 30px;
             font-size: 14px;
         }
 
