--- a/learn_english_words/src/components/WordComponent/Word/word.module.scss
+++ b/learn_english_words/src/components/WordComponent/Word/word.module.scss
@@ -3,7 +3,7 @@
     padding: 5px;
     background-color: #FFF;
     font-family: 'Inter';
-    font-size: 19px;
+    font-size: 18px;
     font-weight: 300;
 }
 
@@ -16,4 +16,18 @@
     font-size: 16px;
     font-weight: 300;
     font-style: italic;
+}
+
+@media screen and (max-width: 599.98px) {
+
+    .wrapper {
+        font-size: 16px;
+        margin: 5px 0;
+    }
+
+    .input {
+        width: 85%;
+        padding-left: 15px;
+        margin: 5px 0;
+    }
 }
