--- a/learn_english_words/src/components/WordComponent/wordComponent.module.scss
+++ b/learn_english_words/src/components/WordComponent/wordComponent.module.scss
@@ -41,3 +41,17 @@
         }
     }
 }
+
+
+@media screen and (max-width: 599.98px) {
+    .conainer {
+        display: block;
+        text-align: center;
+        border: 2px solid #579a7b;
+        margin-bottom: 20px;
+
+        .btn_container {
+            padding: 5px;
+        }
+    }
+}
