--- a/learn_english_words/src/components/Header/header.module.scss
+++ b/learn_english_words/src/components/Header/header.module.scss
@@ -10,9 +10,9 @@
     background-color: #61a485;
     padding: 0 15px;
 
-    position: sticky;
-    top: 0;
-    z-index: 1;
+    // position: sticky;
+    // top: 0;
+    // z-index: 1;
 
 
     .login_form {
