--- a/learn_english_words/src/components/WordComponent/Button/button.module.scss
+++ b/learn_english_words/src/components/WordComponent/Button/button.module.scss
@@ -6,3 +6,8 @@
     cursor: pointer;
     box-shadow: 0.05em 0.05em 0.5em #579a7b;
 }
+
+.btn_disabled:hover {
+    cursor: default;
+    box-shadow: none;
+}
