--- a/learn_english_words/src/components/WordComponent/wordComponent.module.scss
+++ b/learn_english_words/src/components/WordComponent/wordComponent.module.scss
@@ -1,7 +1,7 @@
 .conainer {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 1fr 25px;
+    grid-template-rows: 1fr auto;
     background-color: #f0fbf6;
     gap: 5px;
     margin-bottom: 10px;
@@ -51,7 +51,6 @@
         font-family: 'Inter';
         font-size: 15px;
         font-weight: 300;
-        padding: 8px;
         text-align: center;
         grid-column: 1/5;
         grid-row: 2/3;
