--- a/learn_english_words/src/components/WordComponent/wordComponent.module.scss
+++ b/learn_english_words/src/components/WordComponent/wordComponent.module.scss
@@ -59,7 +59,7 @@
 
 
 @media screen and (max-width: 599.98px) {
-    .conainer {
+    .container {
         display: block;
         text-align: center;
         border: 2px solid #579a7b;
