- created UserStore; - added user access to the MainPage, LoginForm and Header components; - wrote the logic for saving user data.

--- a/learn_english_words/src/components/Button/button.module.scss
+++ b/learn_english_words/src/components/Button/button.module.scss
@@ -7,7 +7,7 @@
     box-shadow: 0.05em 0.05em 0.5em #579a7b;
 }
 
-.btn_disabled:hover {
+.btn[disabled] {
     cursor: default;
     box-shadow: none;
 }
