--- a/learn_english_words/src/components/Header/header.module.scss
+++ b/learn_english_words/src/components/Header/header.module.scss
@@ -10,11 +10,6 @@
     background-color: #61a485;
     padding: 0 15px;
 
-    // position: sticky;
-    // top: 0;
-    // z-index: 1;
-
-
     .login_form {
         display: flex;
         gap: 5px;
@@ -30,14 +25,14 @@
             display: flex;
             align-items: center;
             gap: 10px;
-            margin-left: 20px;
+            margin-left: 30px;
 
             .profil_icon {
                 width: 30px;
                 height: 30px;
             }
 
-            .text {
+            .btn {
                 border: 1px solid #FFFFFF;
                 border-radius: 7px;
                 background-color: #61a485;
@@ -49,10 +44,18 @@
                 font-weight: 300;
             }
 
-            .text:hover {
+            .btn:hover,
+            .userName:hover {
                 cursor: pointer;
                 transform: scale(1.1, 1.1);
                 box-shadow: 0.3em 0.3em 2em rgba(255, 255, 255, 0.3);
+            }
+
+            .userName {
+                color: #FFFFFF;
+                font-family: 'Inter';
+                font-size: 22px;
+                font-weight: 500;
             }
         }
     }
@@ -82,7 +85,10 @@
             margin: 5px auto;
 
             .profil {
-                .text {
+                margin-left: 0;
+                margin-right: 15px;
+
+                .btn {
                     padding: 4px;
                     font-size: 14px;
                 }
