--- a/learn_english_words/src/components/LoginForm/loginForm.module.scss
+++ b/learn_english_words/src/components/LoginForm/loginForm.module.scss
@@ -8,10 +8,10 @@
 
     .form {
         position: absolute;
-        top: 20%;
+        top: 30%;
         left: 25%;
         right: 25%;
-        bottom: 30%;
+        bottom: 35%;
         opacity: 1;
         background-color: #edf1f5;
         border-radius: 5px;
@@ -27,7 +27,7 @@
         }
 
         .input {
-            width: 50%;
+            width: 60%;
             display: block;
             margin: 10px auto;
             padding: 7px;
@@ -42,13 +42,12 @@
 
         .saveDate_btn {
             display: block;
-            width: 50%;
+            width: 60%;
             height: 16%;
             border: none;
             background-color: #396450;
             color: #fff;
-            margin: auto;
-            margin-top: 20px;
+            margin: 20px auto 0;
             border-radius: 2px;
 
             font-family: 'Inter';
