--- a/learn_english_words/src/pages/MainPage/mainPage.module.scss
+++ b/learn_english_words/src/pages/MainPage/mainPage.module.scss
@@ -1,17 +1,22 @@
-.button {
-    width: 10em;
-    height: 2em;
+.btn {
+    display: block;
+    text-align: center;
+    width: 15em;
+    height: 2.5em;
+    line-height: 2.5em;
     background-color: #579a7b;
     color: white;
     border-radius: 10px;
     border: none;
     margin-top: 4vh;
+    text-decoration: none;
+
     font-family: 'Inter';
     font-size: 16px;
     font-weight: 500;
 }
 
-.button:hover {
+.btn:hover {
     cursor: pointer;
     background-color: #feac4c;
     transform: scale(1.01, 1.01);
@@ -37,10 +42,11 @@
 
 .container {
     height: calc(100vh - 120px);
-    padding: 30px;
+    padding: 50px 30px;
 
     .title {
         text-align: center;
+        margin-top: 30px;
         color: #579a7b;
         font-family: 'Inter';
         font-size: 36px;
@@ -54,7 +60,7 @@
         align-items: center;
         width: 100%;
         height: 50%;
-        margin-top: 50px;
+        margin-top: 30px;
     }
 }
 
