--- a/learn_english_words/src/pages/WordList/wordList.module.scss
+++ b/learn_english_words/src/pages/WordList/wordList.module.scss
@@ -1,3 +1,17 @@
-.container_words_list {
-    padding: 20px 50px;
+@media screen and (min-width: 1024px) {
+    .container_words_list {
+        padding: 20px 100px;
+    }
+}
+
+@media screen and (min-width: 600px) and (max-width: 1024px) {
+    .container_words_list {
+        padding: 15px 20px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .container_words_list {
+        padding: 15px 20px;
+    }
 }
