--- a/learn_english_words/src/components/Header/header.module.scss
+++ b/learn_english_words/src/components/Header/header.module.scss
@@ -1,3 +1,22 @@
+@mixin font($weight, $size, $color) {
+    font-weight: $weight;
+    font-size: $size;
+    font-family: $family;
+    color: $color;
+}
+
+$light: 400;
+$normal: 500;
+
+$font-22: 22px;
+$font-16: 16px;
+
+$dark-green: #55847A;
+$white: #fff;
+
+$family: 'Inter', sans-serif;
+
+
 .container {
     display: flex;
     flex-direction: row;
@@ -7,7 +26,7 @@
     flex: 1;
 
     min-height: 60px;
-    background-color: #61a485;
+    background-color: $dark-green;
     padding: 0 15px;
 
     .login_form {
@@ -27,21 +46,12 @@
             gap: 10px;
             margin-left: 30px;
 
-            .profil_icon {
-                width: 30px;
-                height: 30px;
-            }
-
             .btn {
                 border: 1px solid #FFFFFF;
                 border-radius: 7px;
-                background-color: #61a485;
+                background-color: $dark-green;
                 padding: 7px;
-                color: #FFFFFF;
-
-                font-family: 'Inter';
-                font-size: 16px;
-                font-weight: 300;
+                @include font($light, $font-16, $white);
             }
 
             .btn:hover,
@@ -52,27 +62,8 @@
             }
 
             .userName {
-                color: #FFFFFF;
-                font-family: 'Inter';
-                font-size: 22px;
-                font-weight: 500;
+                @include font($normal, $font-22, $white);
             }
-        }
-    }
-
-    .search_block {
-        display: flex;
-        gap: 1px;
-        margin: 7px 0;
-
-        .input {
-            height: 30px;
-            border: none;
-            padding-left: 7px;
-        }
-
-        .search_icon:hover {
-            cursor: pointer;
         }
     }
 }
@@ -85,8 +76,7 @@
             margin: 5px auto;
 
             .profil {
-                margin-left: 0;
-                margin-right: 15px;
+                margin-left: 0 0 15px;
 
                 .btn {
                     padding: 4px;
@@ -100,11 +90,6 @@
             margin: 7px auto;
 
             .input {
-                height: 25px;
-            }
-
-            .search_icon {
-                width: 25px;
                 height: 25px;
             }
         }
