--- a/learn_english_words/src/components/WordAddingForm/WordAddingForm.module.scss
+++ b/learn_english_words/src/components/WordAddingForm/WordAddingForm.module.scss
@@ -1,3 +1,5 @@
+$dark-green: #55847A;
+
 .container {
     background-color: #f0fbf6;
     margin-bottom: 30px;
@@ -20,7 +22,7 @@
         .form__input {
             width: 93%;
             padding: 7px;
-            border: 1px solid #579a7b;
+            border: 1px solid $dark-green;
             border-radius: 10px;
 
             font-family: 'Inter';
