--- a/learn_english_words/src/components/WordCard/wordCard.module.scss
+++ b/learn_english_words/src/components/WordCard/wordCard.module.scss
@@ -1,64 +1,70 @@
-$main-color: #579a7b;
+@mixin font($weight, $size, $color) {
+    font-weight: $weight;
+    font-size: $size;
+    font-family: $family;
+    color: $color;
+}
+
+$light: 400;
+$normal: 500;
+
+$font-36: 36px;
+$font-26: 26px;
+$font-20: 20px;
+$font-16: 16px;
+
+$dark-green: #55847A;
+$white: #fff;
+$light-gray: #EDEDED;
+
+$family: 'Inter', sans-serif;
+
 
 .container_card {
     width: 300px;
     height: 12em;
 
     text-align: center;
-    border: 2px solid $main-color;
+    border: 2px solid $dark-green;
     border-radius: 10px;
-    background-color: #fff;
+    background-color: $white;
     padding: 20px;
 
     .wordEnglish {
         margin: 25px 0 10px;
-        color: $main-color;
-        font-family: 'Inter';
-        font-size: 36px;
-        font-weight: 500;
+        @include font($normal, $font-36, $dark-green);
     }
 
     .transcription {
-        font-family: 'Inter';
-        font-size: 20px;
-        font-weight: 300;
+        @include font($light, $font-20, $dark-green);
     }
 
     .wordRussian {
-        color: $main-color;
         margin-top: 30px;
-        font-family: 'Inter';
-        font-size: 20px;
-        font-weight: 500;
+        @include font($normal, $font-20, $dark-green);
     }
 
     .button {
         width: 60%;
         height: 40px;
-        border: 1px solid $main-color;
-        background-color: $main-color;
-        color: #FFF;
+        border: 1px solid $dark-green;
+        background-color: $dark-green;
         border-radius: 5px;
         border: none;
         margin-top: 40px;
-        font-family: 'Inter';
-        font-size: 16px;
-        font-weight: 300;
+        @include font($light, $font-16, $white);
     }
 
     .button:hover {
         cursor: pointer;
-        background-color: white;
-        border: 1px solid $main-color;
-        color: $main-color;
-        font-family: 'Inter';
-        font-size: 16px;
-        font-weight: 500;
+        background-color: $white;
+        border: 1px solid $dark-green;
+        @include font($normal, $font-16, $dark-green);
     }
 
     .button:focus {
         border: none;
-        border: 1px solid #32644d;
+        border: 1px solid $dark-green;
     }
 }
 
@@ -70,27 +76,27 @@ $main-color: #579a7b;
 
         .wordEnglish {
             margin: 15px 0 5px;
-            font-size: 26px;
+            font-size: $font-26;
         }
 
         .transcription {
-            font-size: 16px;
+            font-size: $font-16;
         }
 
         .wordRussian {
-            font-size: 20px;
+            font-size: $font-20;
         }
 
         .button {
             max-width: 80%;
             height: 30px;
             margin-top: 30px;
-            font-size: 14px;
+            font-size: $font-16;
         }
 
         .button:hover {
-            font-size: 16px;
-            font-weight: 300;
+            font-size: $font-16;
+            font-weight: $light;
         }
     }
 }
