--- a/learn_english_words/src/components/WordComponent/wordComponent.module.scss
+++ b/learn_english_words/src/components/WordComponent/wordComponent.module.scss
@@ -1,3 +1,21 @@
+@mixin font($weight, $size, $color) {
+    font-weight: $weight;
+    font-size: $size;
+    font-family: $family;
+    color: $color;
+}
+
+$light: 400;
+
+$font-16: 16px;
+
+$dark-green: #55847A;
+$white: #fff;
+$orange: #feac4c;
+
+$family: 'Inter', sans-serif;
+
+
 .container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -8,9 +26,9 @@
     padding: 5px;
 
     .wrapper {
-        border: 1px solid #579a7b;
+        border: 1px solid $dark-green;
         padding: 5px;
-        background-color: #FFF;
+        background-color: $white;
     }
 
     .btn_container {
@@ -25,7 +43,7 @@
         }
 
         .btn_save {
-            background-color: #579a7b;
+            background-color: $dark-green;
         }
 
         .btn_save[disabled] {
@@ -33,11 +51,11 @@
         }
 
         .btn_edit {
-            background-color: #feac4c;
+            background-color: $orange;
         }
 
         .cancel_edit_btn {
-            background-color: #feac4c;
+            background-color: $orange;
         }
 
         .btn_delete {
@@ -47,13 +65,11 @@
     }
 
     .error_text {
-        color: red;
-        font-family: 'Inter';
-        font-size: 15px;
-        font-weight: 300;
         text-align: center;
         grid-column: 1/5;
         grid-row: 2/3;
+        @include font($light, $font-16, red);
+
     }
 }
 
@@ -61,7 +77,7 @@
     .container {
         display: block;
         text-align: center;
-        border: 2px solid #579a7b;
+        border: 2px solid $dark-green;
         margin-bottom: 20px;
 
         .btn_container {
