--- a/learn_english_words/src/pages/CardGallery/cardGallery.module.scss
+++ b/learn_english_words/src/pages/CardGallery/cardGallery.module.scss
@@ -1,7 +1,27 @@
+@mixin font($weight, $size, $color) {
+    font-weight: $weight;
+    font-size: $size;
+    font-family: $family;
+    color: $color;
+}
+
+$normal: 500;
+
+$font-20: 20px;
+$font-16: 16px;
+
+$dark-green: #55847A;
+$white: #fff;
+$light-gray: #EDEDED;
+
+$family: 'Inter', sans-serif;
+
+
 .wrapper {
     padding: 30px 0;
-    background-color: #edf1f5;
     height: 100vh;
+    background: url('/../public/assets/images/circle\ design.png') no-repeat;
+    background-position-y: top;
 
     .container {
         display: flex;
@@ -18,7 +38,7 @@
 
         .btn:hover {
             cursor: pointer;
-            box-shadow: 0.1em 0.1em 1em #579a7b;
+            box-shadow: 0.1em 0.1em 1em $dark-green;
         }
     }
 
@@ -30,11 +50,8 @@
 
     .text {
         text-align: center;
-        font-family: 'Inter';
-        font-size: 20px;
-        font-weight: 500;
-        color: #396450;
         margin-bottom: 30px;
+        @include font($normal, $font-20, $dark-green);
     }
 }
 
